--- a/single-bee/ultra-light-node/bee-config.yaml
+++ b/single-bee/ultra-light-node/bee-config.yaml
@@ -2,7 +2,7 @@
 api-addr: 127.0.0.1:1633
 p2p-addr: :1634
 debug-api-addr: 127.0.0.1:1635
-password-file: /home/bee/.bee/password
+password-file: /home/bee/password
 data-dir: /home/bee/.bee
 # MAINNET CONFIGURATION
 bootnode: /dnsaddr/mainnet.ethswarm.org
