--- a/bee/light-node/bee-config.yml
+++ b/bee/light-node/bee-config.yml
@@ -15,4 +15,4 @@ bootnode: /dnsaddr/mainnet.ethswarm.org
 # BEE MODE: LIGHT CONFIGURATION
 full-node: false
 swap-enable: true
-blockchain-rpc-endpoint: https://gno.getblock.io/a85f3c75-8ffe-4d8c-ad65-1ab6625558d0/mainnet/
+blockchain-rpc-endpoint: https://gno.getblock.io/<YOUR_API_KEY>/mainnet/
