--- a/bee/light-node/docker-compose.yml
+++ b/bee/light-node/docker-compose.yml
@@ -1,22 +1,22 @@
 services:
-    bee-light:
+    bee-lightnode:
         container_name: bee
         image: ethersphere/bee:stable
-        command: start
+        command: start --config /home/bee/.bee.yml
         volumes:
             - ./bee-home-dir:/home/bee
         ports:
-            - 1133:1633
-            - 1134:1634
-            - 1135:1635
+            - 1633:1633
+            - 1634:1634
+            - 1635:1635
         networks:
             - public
 
-    bee-dashboard:
+    bee-lightnode-dashboard:
         container_name: dashboard
         image: rampall/bee-dashboard
         ports:
-            - 3333:8080
+            - 8080:8080
         networks:
             - public
 
