--- a/bee/light-node/bee-config.yml
+++ b/bee/light-node/bee-config.yml
@@ -1,7 +1,7 @@
 # GENERAL BEE CONFIGURATION
-api-addr: 127.0.0.1:1633
+api-addr: :1633
 p2p-addr: :1634
-debug-api-addr: 127.0.0.1:1635
+debug-api-addr: :1635
 password-file: /home/bee/password
 data-dir: /home/bee/.bee
 
