--- a/bee/ultra-light-node/bee-config.yml
+++ b/bee/ultra-light-node/bee-config.yml
@@ -4,6 +4,7 @@ p2p-addr: :1634
 debug-api-addr: :1635
 password-file: /home/bee/password
 data-dir: /home/bee/.bee
+cors-allowed-origins: ["*"]
 
 # DEBUG CONFIGURATION
 debug-api-enable: true
